menambah about us

--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
         a:hover {
             background-color: #e07d05;
         }
+        .about-us {
+            position: fixed;
+            bottom: 10px;
+            width: 100%;
+            text-align: center;
+            font-size: 1rem;
+            color: #fff;
+        }
     </style>
 </head>
 <body>
@@ -63,6 +71,10 @@
         <h1>SMADABA NEWS 2024</h1>
         <p>Ayo kenali sekolah kami lebih dekat</p>
         <a href="halaman-jelajahi.html">Jelajahi Sekolah</a>
+    </div>
+
+    <div class="about-us">
+        <p>Pengembang Web: <a href="aboutus.html">Tim Kami</a></p>
     </div>
 
 </body>
