--- a/organisasi.html
+++ b/organisasi.html
@@ -77,17 +77,7 @@
         <a href="https://www.instagram.com/smanegeri2bantul?igsh=Z3l4MWV3Yzc4dWxt" target="_blank">
             <img src="./image/smadabatransparan.jpg" alt="Logo SMADABA" class="logo">
         </a>
-        <h1>ORGANISASI SMADABA</h1>
-        <nav>
-            <ul>
-                <li><a href="profil.html">Profil Sekolah</a></li>
-                <li><a href="prestasi.html">Prestasi Sekolah</a></li>
-                <li><a href="event.html">Event Sekolah</a></li>
-                <li><a href="fasilitas.html">Fasilitas Sekolah</a></li>
-                <li><a href="organisasi.html">Organisasi Sekolah</a></li>
-                <li><a href="ekstrakurikuler.html">Ekstrakurikuler Sekolah</a></li>
-            </ul>
-        </nav>
+        <h2>ORGANISASI SMADABA</h2>
     </header>
 
     <!-- Galeri Foto Profil Anggota -->
@@ -205,6 +195,15 @@
                 <div class="profile-name">Paragita</div>
                 <p class="profile-description">Kelompok paduan suara yang tampil di berbagai acara sekolah dan kompetisi paduan suara.</p>
             </div>
+
+            <div class="profile-card">
+                <a href="https://www.instagram.com/sitcclub?igsh=MTN3NG53eHdyMTlnYw==" target="_blank">
+                    <img src="./image/ITC.png" alt="ITC" class="profile-img">
+                </a>
+                <div class="profile-name">SMADABA IT Community</div>
+                <p class="profile-description">Mengembangkan keterampilan siswa dalam bidang teknologi informasi dan komputer.</p>
+            </div>
+
         </div>
     </section>
 
