--- a/prestasi.html
+++ b/prestasi.html
@@ -59,21 +59,12 @@
     <header>
         <img src="./image/smadabatransparan.jpg" alt="Logo SMADABA" class="logo">
         <h1>PRESTASI</h1>
-        <nav>
-            <ul>
-                <li><a href="profil.html">Profil Sekolah</a></li>
-                <li><a href="prestasi.html">Prestasi Sekolah</a></li>
-                <li><a href="event.html">Event Sekolah</a></li>
-                <li><a href="fasilitas.html">Fasilitas Sekolah</a></li>
-                <li><a href="organisasi.html">Organisasi Sekolah</a></li>
-                <li><a href="ekstrakurikuler.html">Ekstrakurikuler Sekolah</a></li>
-            </ul>
-        </nav>
+       
     </header>
 
     <!-- Galeri Foto Prestasi -->
     <section>
-        <h2>Prestasi yang diraih siswa-siswi tahun 2024</h2>
+        <h2>Prestasi yang tahun 2024</h2>
         <div class="profile-gallery">
             <div class="profile-card">
                 <img src="./image/P1.jpg" alt="MPK" class="profile-img">
