--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <div class="container">
         <img src="./image/smadaba.jpg" alt="Logo SMADABA">
-        <h1>SMADABA NEWS 2024</h1>
+        <h1>SMADABOUT 2024</h1>
         <p>Ayo kenali sekolah kami lebih dekat</p>
         <a href="halaman-jelajahi.html">Jelajahi Sekolah</a>
     </div>
