--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
             color: #333;
         }
         .container {
-            background-color: #3d1752;
-            padding: 30px;
+            background-image: -webkit-image-set("./image/bgindex.jpg");
+            padding: 40px;
             border-radius: 20px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
             text-align: center;
             color: #fff;
+            background-size: cover;
+            background-position: center;
         }
         img {
             max-width: 150px;
@@ -62,19 +64,25 @@
             font-size: 1rem;
             color: #fff;
         }
+        body {
+            height: 100%;
+            margin: 50px;
+            background-size: cover;
+            background-position: center;
+        }
     </style>
 </head>
-<body>
+<body background="./image/bgg.jpg">
 
     <div class="container">
         <img src="./image/smadaba.jpg" alt="Logo SMADABA">
-        <h1>SMADABOUT 2024</h1>
+        <h1>SMADABA NEWS 2024</h1>
         <p>Ayo kenali sekolah kami lebih dekat</p>
         <a href="halaman-jelajahi.html">Jelajahi Sekolah</a>
     </div>
 
     <div class="about-us">
-        <p>Pengembang Web: <a href="aboutUs.html">Tim Kami</a></p>
+        <p>Pengembang Web: <a href="aboutus.html">Tim Kami</a></p>
     </div>
 
 </body>
