--- a/event.html
+++ b/event.html
@@ -6,8 +6,32 @@
     <title>Event SMADABA</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        body h2 {
-            color: black;
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        h2 {
+            color: #333;
+        }
+        section {
+            text-align: center;
+            padding: 50px;
+        }
+        .back-button-container {
+            text-align: center;
+            margin-top: 20px;
+        }
+        .back-button {
+            text-decoration: none;
+            padding: 10px 20px;
+            background-color: #004d99;
+            color: white;
+            border-radius: 5px;
+            transition: 0.3s;
+        }
+        .back-button:hover {
+            background-color: #0066cc;
         }
     </style>
 </head>
@@ -17,20 +41,16 @@
             <img src="./image/smadabatransparan.jpg" alt="Logo SMADABA" class="logo">
         </a>
         <h1>EVENT SMADABA</h1>
-        
     </header>
 
     <section>
         <h2>Event 2024</h2>
-        <p>Coming soon...</p>
-        <!-- Tambahkan detail lebih lanjut di sini -->
+        <p style="color: #555;">Nantikan event yang akan datang!</p>
+        <img src="./image/calender.jpg" alt="Event Placeholder" style="width: 200px; border-radius: 10px;">
     </section>
 
-    <!-- Tombol Kembali -->
     <div class="back-button-container">
         <a href="halaman-jelajahi.html" class="back-button">Kembali</a>
     </div>
-
-    
 </body>
 </html>
