--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </div>
 
     <div class="about-us">
-        <p>Pengembang Web: <a href="aboutus.html">Tim Kami</a></p>
+        <p>Pengembang Web: <a href="aboutUs.html">Tim Kami</a></p>
     </div>
 
 </body>
