--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             background-image: -webkit-image-set("./image/bgindex.jpg");
             padding: 40px;
             border-radius: 20px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+            box-shadow: 10px 40px 15px rgba(255, 255, 255, 0.2);
             text-align: center;
             color: #fff;
             background-size: cover;
