--- a/halaman-jelajahi.html
+++ b/halaman-jelajahi.html
@@ -41,6 +41,7 @@
             color: #fff;
             position: relative;
             overflow: hidden;
+            border: 2px solid #ffb300;
         }
         .section-link::before {
             content: "";
@@ -136,6 +137,7 @@
         
         <a href="index.html" class="back-button">Kembali ke halaman utama</a>
     </div>
+    
 
 </body>
 </html>
