--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             color: #fff;
             background-size: cover;
             background-position: center;
+            border: 4px solid #575656;
         }
         img {
             max-width: 150px;
@@ -38,13 +39,15 @@
             margin-bottom: 10px;
             text-transform: uppercase;
             letter-spacing: 2px;
+            text-shadow: 2px 4px 8px rgba(0, 0, 0, 1);
         }
         p {
             font-size: 1.2rem;
             margin-bottom: 20px;
+            text-shadow: 2px 4px 10px rgba(0, 0, 0, 2);
         }
         a {
-            background-color: #ffb300;
+            background-color: #c69728;
             color: #fff;
             padding: 10px 20px;
             border-radius: 25px;
@@ -82,7 +85,7 @@
     </div>
 
     <div class="about-us">
-        <p>Pengembang Web: <a href="aboutUs.html">Tim Kami</a></p>
+        <p>Pengembang Web: <a href="aboutus.html">Tim Kami</a></p>
     </div>
 
 </body>
