--- a/organisasi.html
+++ b/organisasi.html
@@ -23,11 +23,13 @@
         }
 
         .profile-img {
-            width: 60px;
-            height: 60px;
+            width: 85px;
+            height: 85px;
             border-radius: 50%;
-            margin-bottom: 10px;
-        }
+            margin-bottom: 20px;
+            transition: transform 0.3s ease-in-out;
+}
+
 
         .profile-name {
             font-size: 0.9rem;
