--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 
     <div class="container">
         <img src="./image/smadaba.jpg" alt="Logo SMADABA">
-        <h1>SMADABA NEWS 2024</h1>
-        <p>Ayo kenali sekolah kami lebih dekat</p>
+        <h1>SMADABOUT</h1>
+        <p>Ayo kenali sekolah kami lebih dekat menggunakan website kami</p>
         <a href="halaman-jelajahi.html">Jelajahi Sekolah</a>
     </div>
 
