--- a/halaman-jelajahi.html
+++ b/halaman-jelajahi.html
@@ -27,36 +27,64 @@
             font-size: 1.2rem;
             margin: 20px;
         }
-        /* Kolom dengan background gambar */
-        .section-link {
-            display: block;
-            background-size: cover;
-            background-position: center;
-            border-radius: 15px;
-            padding: 25px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            margin: 20px auto;
-            width: 80%;
-            text-decoration: none;
-            color: #fff;
-            position: relative;
-            overflow: hidden;
-            border: 2px solid #ffb300;
-        }
-        .section-link::before {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5); /* Overlay hitam transparan di atas gambar */
-            z-index: 0;
-        }
-        .section-link h2, .section-link p {
-            position: relative;
-            z-index: 1;
-        }
+        /* Animasi slide-in dari kiri */
+@keyframes slideInFromLeft {
+    from {
+        transform: translateX(-100%); /* Mulai dari luar layar di kiri */
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0); /* Pindah ke posisi normal */
+        opacity: 1;
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+header {
+    animation: fadeIn 1.5s ease-in-out;
+}
+
+/* Kolom dengan background gambar */
+.section-link {
+    display: block;
+    background-size: cover;
+    background-position: center;
+    border-radius: 15px;
+    padding: 25px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    margin: 20px auto;
+    width: 80%;
+    text-decoration: none;
+    color: #fff;
+    position: relative;
+    overflow: hidden;
+    border: 2px solid #ffb300;
+    animation: slideInFromLeft 0.5s ease-out; /* Terapkan animasi slide-in */
+}
+
+.section-link::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Overlay hitam transparan di atas gambar */
+    z-index: 0;
+}
+
+.section-link h2, .section-link p {
+    position: relative;
+    z-index: 1;
+}
+
         h2 {
             color: #fff;
             font-size: 2rem;
