--- a/aboutus.html
+++ b/aboutus.html
@@ -24,13 +24,16 @@
             color: #ffffff;
         }
 
+       
         .member-gallery {
             display: grid;
-            grid-template-columns: repeat(2, 1fr); /* 2 kolom per baris */
+            grid-template-columns: repeat(2, 1fr);
             gap: 20px;
             padding: 15px;
-            justify-content: center; /* Tengah secara horizontal */
+            justify-content: center;
         }
+
+
 
         .member-card {
             background-color: #1e1e2f;
@@ -38,8 +41,9 @@
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
             text-align: center;
-            padding: 15px;
-            width: 250px;
+            padding: 25px;
+            width: 150px;
+            max-width: 100%;
             transition: transform 0.3s, box-shadow 0.3s;
         }
 
@@ -92,6 +96,26 @@
             display: flex;
             justify-content: center;
         }
+        
+    .member-gallery {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        padding: 15px;
+        justify-content: center;
+    }
+
+    @media (min-width: 576px) {
+        .member-gallery {
+            grid-template-columns: repeat(2, 1fr); 
+        }
+    }
+
+    @media (min-width: 992px) {
+        .member-gallery {
+            grid-template-columns: repeat(3, 1fr);
+        }
+    }
+
     </style>
 </head>
 <body>
