--- a/organisasi.html
+++ b/organisasi.html
@@ -68,6 +68,7 @@
     .profile-card {
         flex: 1 1 30%; /* Setiap elemen mengambil sekitar 30% lebar */
         max-width: 30%; /* Pastikan elemen tidak lebih dari 30% */
+        justify-content: center;
     }
 }
 
