ubah warna card

--- a/organisasi.html
+++ b/organisasi.html
@@ -44,7 +44,7 @@
         /* warna kolom */
         .profile-card {
             text-align: center;
-            background: linear-gradient(to left, #e1e1e1, #b0b0b0);
+            background: linear-gradient(to left, #eae6e6, #cac8c8);
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.9);
             width: 140px;
