--- a/event.html
+++ b/event.html
@@ -12,26 +12,39 @@
             padding: 0;
         }
         h2 {
-            color: #333;
+            color: #000000;
         }
         section {
             text-align: center;
             padding: 50px;
         }
-        .back-button-container {
-            text-align: center;
-            margin-top: 20px;
+        .event {
+            max-width: 700px;
+            margin: 20px auto;
+            padding: 20px;
+            border: 2.5px solid #545353;
+            border-radius: 10px;
+            background-color: #c5c5c5;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
         }
-        .back-button {
-            text-decoration: none;
-            padding: 10px 20px;
-            background-color: #004d99;
-            color: white;
-            border-radius: 5px;
-            transition: 0.3s;
+        .event img {
+            width: 60%;
+            max-width: 350px;
+            border-radius: 10px;
+            margin-bottom: 20px;
         }
-        .back-button:hover {
-            background-color: #0066cc;
+        .event h3 {
+            margin: 10px 0;
+            font-size: 1.5rem;
+            color: #302f2f;
+        }
+        .event p {
+            color: #393939;
+            line-height: 1.6;
+        }
+        .event .details {
+            margin-top: 15px;
+            font-weight: bold;
         }
     </style>
 </head>
@@ -45,8 +58,18 @@
 
     <section>
         <h2>Event 2024</h2>
-        <p style="color: #555;">Nantikan event yang akan datang!</p>
-        <img src="./image/calender.jpg" alt="Event Placeholder" style="width: 200px; border-radius: 10px;">
+        <div class="event">
+            <img src="./image/eventpanen.png" alt="Poster Dreams of the Better Future">
+            <h3>Panen Karya #7<br/>Dreams of the Better Future</h3>
+            <p>Suara untuk masa depan dimulai hari ini. Lawan perundungan, gunakan teknologi untuk kebaikan, dan wujudkan demokrasi yang inklusif. Bersama kita merajut impian dunia, menuju masa depan lebih cerah.</p>
+            <p>Dunia yang penuh inovasi, mari kita ciptakan perubahan dengan keberanian dan empati. Bersama kita bisa wujudkan Dreams of a Better Future!</p>
+            <p class="details">
+                🗓 Tanggal: 12-13 Desember 2024<br>
+                📍 Lokasi: SMA Negeri 2 Bantul<br>
+                ⏰ Waktu: Pukul 07.30 WIB<br>
+                📷 Instagram: <a href="https://www.instagram.com/exscoproject/" class="details" target="_blank">@exscoproject</a>
+            </p>
+        </div>
     </section>
 
     <div class="back-button-container">
