--- a/event.html
+++ b/event.html
@@ -57,7 +57,7 @@
     </header>
 
     <section>
-        <h2>Event 2024</h2>
+        <h2>Event yang sedang berlangsung</h2>
         <div class="event">
             <img src="./image/eventpanen.png" alt="Poster Dreams of the Better Future">
             <h3>Panen Karya #7<br/>Dreams of the Better Future</h3>
