--- a/prestasi.html
+++ b/prestasi.html
@@ -186,6 +186,48 @@
             <div class="profile-card">
                 <img src="./image/P22.jpg" alt="Paragita" class="profile-img">
             </div>
+
+            <div class="profile-card">
+                <img src="./image/P23.png" alt="Paragita" class="profile-img">
+            </div>
+
+            <div class="profile-card">
+                <img src="./image/P24.png" alt="Paragita" class="profile-img">
+            </div>
+
+            <div class="profile-card">
+                <img src="./image/P25.png" alt="Paragita" class="profile-img">
+            </div>
+
+            <div class="profile-card">
+                <img src="./image/P26.png" alt="Paragita" class="profile-img">
+            </div>
+
+            <div class="profile-card">
+                <img src="./image/P27.png" alt="Paragita" class="profile-img">
+            </div>
+
+            <div class="profile-card">
+                <img src="./image/P28.png" alt="Paragita" class="profile-img">
+            </div>
+
+            <div class="profile-card">
+                <img src="./image/P29.png" alt="Paragita" class="profile-img">
+            </div>
+
+            <div class="profile-card">
+                <img src="./image/P30.png" alt="Paragita" class="profile-img">
+            </div>
+
+            <div class="profile-card">
+                <img src="./image/P31.png" alt="Paragita" class="profile-img">
+            </div>
+
+            <div class="profile-card">
+                <img src="./image/P32.png" alt="Paragita" class="profile-img">
+            </div>
+
+
         </div>
     </section>
 
