--- a/fasilitas.html
+++ b/fasilitas.html
@@ -73,7 +73,7 @@
     <section> 
         <h3>Fasilitas-Fasilitas :</h3>
         <ul>
-            <li>Ruang Teori/Kelas</li>
+            <li>Ruang Kelas</li>
             <li>Laboratorium Kimia</li>
             <li>Laboratorium Fisika</li>
             <li>Laboratorium Biologi</li>
@@ -89,8 +89,8 @@
             <li>Ruang Kepala Sekolah</li>
             <li>Ruang Guru</li>
             <li>Ruang TU</li>
-            <li>Ruang Ibadah (Masjid)</li>
-            <li>Kantor Satpam</li>
+            <li>Ruang Agama</li>
+            <li>Masjid</li>
             <li>Lapangan Basket</li>
             <li>Lapangan Voli</li>
             <li>Kantin</li>
